Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -30,16 +30,18 @@ body {
 .calculator>.display {
     flex: 2.5 1 0;
     background-color: #9FCCE3;
-    height: 100%;
     width: 100%;
     display: flex;
     align-items: end;
     justify-content: end;
     font-family: "Helvetica";
+    overflow: hidden;
 }
 
 .results {
     margin: 10px;
+    overflow-y: auto;
+    word-wrap: break-word;
 }
 
 .display-buttons {
